20170907/githubsyno-qermt-synidantlr4/target/generated-sources/antlr4/com/synodex/qcai/antlr4/rules/SynRuleParser.java
// Generated from com\synodex\qcai\antlr4\rules\SynRule.g4 by ANTLR 4.0
package com.synodex.qcai.antlr4.rules;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SynRuleParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, RESERVEWORD_IF=2, RESERVEWORD_THEN=3, RESERVEWORD_TRUE=4, RESERVEWORD_FALSE=5, 
		RESERVEWORD_DATEDIFF=6, RESERVEWORD_ISMOSTRECENT=7, RESERVEWORD_MOSTRECENT=8, 
		LOGICALOPERATORS=9, LOGICALOPERATOR_AND=10, LOGICALOPERATOR_OR=11, ALPHALOWERCASE=12, 
		SINGLEALPHALOWERCASE=13, ALPHAUPPERCASE=14, SINGLEALPHAUPPERCASE=15, ALPHA=16, 
		SINGLEALPHA=17, CONSTANT_PERIOD=18, CONSTANT_DASH=19, CONSTANTS_UNDERSCORE=20, 
		CONSTANT_AND=21, CONSTANT_EQUAL=22, CONSTANT_NOTEQUAL=23, CONSTANT_QUOTE=24, 
		CONSTANT_DOUBLEQUOTE=25, CONSTANT_COMMA=26, CONSTANT_LEFT_ROUNDBRACKET=27, 
		CONSTANT_RIGHT_ROUNDBRACKET=28, CONSTANT_LEFT_SQUAREBRACKET=29, CONSTANT_RIGHT_SQUAREBRACKET=30, 
		CONSTANT_LEFT_CURLYBRACKET=31, CONSTANT_RIGHT_CURLYBRACKET=32, CONSTANT_PERCENT=33, 
		CONSTANT_AMPERSAND=34, OPERATORS=35, OPERATOR_NOT=36, FLOAT=37, DIGITS=38, 
		DIGIT=39, PERCENT=40, ALPHADIGITS=41, DIGITSALPHA=42, OPERATORS_FUNCTIONS=43, 
		ISNULL=44, ISNOTNULL=45, INT=46, NEWLINE=47, WS=48;
	public static final String[] tokenNames = {
		"<INVALID>", "'d'", "RESERVEWORD_IF", "RESERVEWORD_THEN", "RESERVEWORD_TRUE", 
		"RESERVEWORD_FALSE", "RESERVEWORD_DATEDIFF", "RESERVEWORD_ISMOSTRECENT", 
		"RESERVEWORD_MOSTRECENT", "LOGICALOPERATORS", "LOGICALOPERATOR_AND", "LOGICALOPERATOR_OR", 
		"ALPHALOWERCASE", "SINGLEALPHALOWERCASE", "ALPHAUPPERCASE", "SINGLEALPHAUPPERCASE", 
		"ALPHA", "SINGLEALPHA", "'.'", "'-'", "'_'", "CONSTANT_AND", "'='", "'!='", 
		"CONSTANT_QUOTE", "'\"'", "','", "'('", "')'", "'['", "']'", "'{'", "'}'", 
		"'%'", "'&'", "OPERATORS", "OPERATOR_NOT", "FLOAT", "DIGITS", "DIGIT", 
		"PERCENT", "ALPHADIGITS", "DIGITSALPHA", "OPERATORS_FUNCTIONS", "ISNULL", 
		"ISNOTNULL", "INT", "NEWLINE", "WS"
	};
	public static final int
		RULE_synrule = 0, RULE_ruleDeclaration = 1, RULE_assignRuleSynId = 2, 
		RULE_ruleConditions = 3, RULE_ruleAssignment = 4, RULE_synid = 5, RULE_synproperty = 6, 
		RULE_synpropertychars = 7, RULE_sypropertyseperators = 8, RULE_synidproperty = 9, 
		RULE_assignStringSynIdPropertyValue = 10, RULE_assignRuleAssignmentPropertyValue = 11, 
		RULE_synidValues = 12, RULE_synidValue = 13, RULE_synidsSingleValue = 14, 
		RULE_dateDiff = 15, RULE_mostRecent = 16, RULE_isMostRecent = 17;
	public static final String[] ruleNames = {
		"synrule", "ruleDeclaration", "assignRuleSynId", "ruleConditions", "ruleAssignment", 
		"synid", "synproperty", "synpropertychars", "sypropertyseperators", "synidproperty", 
		"assignStringSynIdPropertyValue", "assignRuleAssignmentPropertyValue", 
		"synidValues", "synidValue", "synidsSingleValue", "dateDiff", "mostRecent", 
		"isMostRecent"
	};

	@Override
	public String getGrammarFileName() { return "SynRule.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public SynRuleParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class SynruleContext extends ParserRuleContext {
		public RuleDeclarationContext ruleDeclaration() {
			return getRuleContext(RuleDeclarationContext.class,0);
		}
		public SynruleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_synrule; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SynRuleListener ) ((SynRuleListener)listener).enterSynrule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SynRuleListener ) ((SynRuleListener)listener).exitSynrule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SynRuleVisitor ) return ((SynRuleVisitor<? extends T>)visitor).visitSynrule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SynruleContext synrule() throws RecognitionException {
		SynruleContext _localctx = new SynruleContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_synrule);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(36); ruleDeclaration();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RuleDeclarationContext extends ParserRuleContext {
		public TerminalNode CONSTANT_RIGHT_ROUNDBRACKET() { return getToken(SynRuleParser.CONSTANT_RIGHT_ROUNDBRACKET, 0); }
		public RuleConditionsContext ruleConditions() {
			return getRuleContext(RuleConditionsContext.class,0);
		}
		public TerminalNode CONSTANT_LEFT_ROUNDBRACKET() { return getToken(SynRuleParser.CONSTANT_LEFT_ROUNDBRACKET, 0); }
		public AssignRuleSynIdContext assignRuleSynId() {
			return getRuleContext(AssignRuleSynIdContext.class,0);
		}
		public TerminalNode RESERVEWORD_IF() { return getToken(SynRuleParser.RESERVEWORD_IF, 0); }
		public RuleAssignmentContext ruleAssignment() {
			return getRuleContext(RuleAssignmentContext.class,0);
		}
		public TerminalNode RESERVEWORD_THEN() { return getToken(SynRuleParser.RESERVEWORD_THEN, 0); }
		public RuleDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ruleDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SynRuleListener ) ((SynRuleListener)listener).enterRuleDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SynRuleListener ) ((SynRuleListener)listener).exitRuleDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SynRuleVisitor ) return ((SynRuleVisitor<? extends T>)visitor).visitRuleDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RuleDeclarationContext ruleDeclaration() throws RecognitionException {
		RuleDeclarationContext _localctx = new RuleDeclarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_ruleDeclaration);
		try {
			setState(52);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(38); match(RESERVEWORD_IF);
				setState(39); assignRuleSynId();
				setState(40); ruleConditions();
				setState(41); match(RESERVEWORD_THEN);
				setState(42); ruleAssignment();
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(44); match(RESERVEWORD_IF);
				setState(45); match(CONSTANT_LEFT_ROUNDBRACKET);
				setState(46); assignRuleSynId();
				setState(47); ruleConditions();
				setState(48); match(CONSTANT_RIGHT_ROUNDBRACKET);
				setState(49); match(RESERVEWORD_THEN);
				setState(50); ruleAssignment();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignRuleSynIdContext extends ParserRuleContext {
		public List<TerminalNode> CONSTANT_RIGHT_ROUNDBRACKET() { return getTokens(SynRuleParser.CONSTANT_RIGHT_ROUNDBRACKET); }
		public List<TerminalNode> CONSTANT_LEFT_ROUNDBRACKET() { return getTokens(SynRuleParser.CONSTANT_LEFT_ROUNDBRACKET); }
		public SynidContext synid() {
			return getRuleContext(SynidContext.class,0);
		}
		public TerminalNode CONSTANT_NOTEQUAL() { return getToken(SynRuleParser.CONSTANT_NOTEQUAL, 0); }
		public TerminalNode CONSTANT_LEFT_ROUNDBRACKET(int i) {
			return getToken(SynRuleParser.CONSTANT_LEFT_ROUNDBRACKET, i);
		}
		public TerminalNode RESERVEWORD_FALSE() { return getToken(SynRuleParser.RESERVEWORD_FALSE, 0); }
		public List<AssignRuleSynIdContext> assignRuleSynId() {
			return getRuleContexts(AssignRuleSynIdContext.class);
		}
		public TerminalNode CONSTANT_RIGHT_ROUNDBRACKET(int i) {
			return getToken(SynRuleParser.CONSTANT_RIGHT_ROUNDBRACKET, i);
		}
		public TerminalNode CONSTANT_EQUAL() { return getToken(SynRuleParser.CONSTANT_EQUAL, 0); }
		public List<TerminalNode> CONSTANT_QUOTE() { return getTokens(SynRuleParser.CONSTANT_QUOTE); }
		public TerminalNode RESERVEWORD_TRUE() { return getToken(SynRuleParser.RESERVEWORD_TRUE, 0); }
		public TerminalNode CONSTANT_QUOTE(int i) {
			return getToken(SynRuleParser.CONSTANT_QUOTE, i);
		}
		public AssignRuleSynIdContext assignRuleSynId(int i) {
			return getRuleContext(AssignRuleSynIdContext.class,i);
		}
		public AssignRuleSynIdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignRuleSynId; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SynRuleListener ) ((SynRuleListener)listener).enterAssignRuleSynId(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SynRuleListener ) ((SynRuleListener)listener).exitAssignRuleSynId(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SynRuleVisitor ) return ((SynRuleVisitor<? extends T>)visitor).visitAssignRuleSynId(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssignRuleSynIdContext assignRuleSynId() throws RecognitionException {
		AssignRuleSynIdContext _localctx = new AssignRuleSynIdContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_assignRuleSynId);
		int _la;
		try {
			setState(69);
			switch (_input.LA(1)) {
			case ALPHALOWERCASE:
			case ALPHAUPPERCASE:
			case ALPHA:
			case CONSTANT_PERIOD:
			case CONSTANT_DASH:
			case CONSTANTS_UNDERSCORE:
			case ALPHADIGITS:
				enterOuterAlt(_localctx, 1);
				{
				setState(54); synid();
				setState(55);
				_la = _input.LA(1);
				if ( !(_la==CONSTANT_EQUAL || _la==CONSTANT_NOTEQUAL) ) {
				_errHandler.recoverInline(this);
				}
				consume();
				setState(56); match(CONSTANT_QUOTE);
				setState(57);
				_la = _input.LA(1);
				if ( !(_la==RESERVEWORD_TRUE || _la==RESERVEWORD_FALSE) ) {
				_errHandler.recoverInline(this);
				}
				consume();
				setState(58); match(CONSTANT_QUOTE);
				}
				break;
			case RESERVEWORD_THEN:
			case LOGICALOPERATORS:
			case CONSTANT_LEFT_ROUNDBRACKET:
			case CONSTANT_RIGHT_ROUNDBRACKET:
				enterOuterAlt(_localctx, 2);
				{
				setState(66);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==CONSTANT_LEFT_ROUNDBRACKET) {
					{
					{
					setState(60); match(CONSTANT_LEFT_ROUNDBRACKET);
					setState(61); assignRuleSynId();
					setState(62); match(CONSTANT_RIGHT_ROUNDBRACKET);
					}
					}
					setState(68);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RuleConditionsContext extends ParserRuleContext {
		public AssignStringSynIdPropertyValueContext assignStringSynIdPropertyValue(int i) {
			return getRuleContext(AssignStringSynIdPropertyValueContext.class,i);
		}
		public TerminalNode LOGICALOPERATORS(int i) {
			return getToken(SynRuleParser.LOGICALOPERATORS, i);
		}
		public List<TerminalNode> CONSTANT_RIGHT_ROUNDBRACKET() { return getTokens(SynRuleParser.CONSTANT_RIGHT_ROUNDBRACKET); }
		public TerminalNode CONSTANT_LEFT_ROUNDBRACKET(int i) {
			return getToken(SynRuleParser.CONSTANT_LEFT_ROUNDBRACKET, i);
		}
		public List<TerminalNode> CONSTANT_LEFT_ROUNDBRACKET() { return getTokens(SynRuleParser.CONSTANT_LEFT_ROUNDBRACKET); }
		public TerminalNode CONSTANT_RIGHT_ROUNDBRACKET(int i) {
			return getToken(SynRuleParser.CONSTANT_RIGHT_ROUNDBRACKET, i);
		}
		public List<AssignStringSynIdPropertyValueContext> assignStringSynIdPropertyValue() {
			return getRuleContexts(AssignStringSynIdPropertyValueContext.class);
		}
		public List<TerminalNode> LOGICALOPERATORS() { return getTokens(SynRuleParser.LOGICALOPERATORS); }
		public RuleConditionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ruleConditions; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SynRuleListener ) ((SynRuleListener)listener).enterRuleConditions(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SynRuleListener ) ((SynRuleListener)listener).exitRuleConditions(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SynRuleVisitor ) return ((SynRuleVisitor<? extends T>)visitor).visitRuleConditions(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RuleConditionsContext ruleConditions() throws RecognitionException {
		RuleConditionsContext _localctx = new RuleConditionsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_ruleConditions);
		int _la;
		try {
			setState(95);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(75);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==LOGICALOPERATORS) {
					{
					{
					setState(71); match(LOGICALOPERATORS);
					setState(72); assignStringSynIdPropertyValue();
					}
					}
					setState(77);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(92);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==LOGICALOPERATORS) {
					{
					{
					setState(78); match(LOGICALOPERATORS);
					setState(79); match(CONSTANT_LEFT_ROUNDBRACKET);
					setState(80); assignStringSynIdPropertyValue();
					setState(85);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==LOGICALOPERATORS) {
						{
						{
						setState(81); match(LOGICALOPERATORS);
						setState(82); assignStringSynIdPropertyValue();
						}
						}
						setState(87);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					setState(88); match(CONSTANT_RIGHT_ROUNDBRACKET);
					}
					}
					setState(94);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RuleAssignmentContext extends ParserRuleContext {
		public TerminalNode LOGICALOPERATORS(int i) {
			return getToken(SynRuleParser.LOGICALOPERATORS, i);
		}
		public List<AssignRuleAssignmentPropertyValueContext> assignRuleAssignmentPropertyValue() {
			return getRuleContexts(AssignRuleAssignmentPropertyValueContext.class);
		}
		public List<TerminalNode> LOGICALOPERATORS() { return getTokens(SynRuleParser.LOGICALOPERATORS); }
		public AssignRuleAssignmentPropertyValueContext assignRuleAssignmentPropertyValue(int i) {
			return getRuleContext(AssignRuleAssignmentPropertyValueContext.class,i);
		}
		public RuleAssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ruleAssignment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SynRuleListener ) ((SynRuleListener)listener).enterRuleAssignment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SynRuleListener ) ((SynRuleListener)listener).exitRuleAssignment(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SynRuleVisitor ) return ((SynRuleVisitor<? extends T>)visitor).visitRuleAssignment(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RuleAssignmentContext ruleAssignment() throws RecognitionException {
		RuleAssignmentContext _localctx = new RuleAssignmentContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_ruleAssignment);
		int _la;
		try {
			setState(107);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(97); assignRuleAssignmentPropertyValue();
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(104);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ALPHALOWERCASE) | (1L << ALPHAUPPERCASE) | (1L << ALPHA) | (1L << CONSTANT_PERIOD) | (1L << CONSTANT_DASH) | (1L << CONSTANTS_UNDERSCORE) | (1L << ALPHADIGITS))) != 0)) {
					{
					{
					setState(98); assignRuleAssignmentPropertyValue();
					setState(99); match(LOGICALOPERATORS);
					setState(100); assignRuleAssignmentPropertyValue();
					}
					}
					setState(106);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SynidContext extends ParserRuleContext {
		public SynpropertycharsContext synpropertychars(int i) {
			return getRuleContext(SynpropertycharsContext.class,i);
		}
		public List<SynpropertycharsContext> synpropertychars() {
			return getRuleContexts(SynpropertycharsContext.class);
		}
		public SynidContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_synid; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SynRuleListener ) ((SynRuleListener)listener).enterSynid(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SynRuleListener ) ((SynRuleListener)listener).exitSynid(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SynRuleVisitor ) return ((SynRuleVisitor<? extends T>)visitor).visitSynid(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SynidContext synid() throws RecognitionException {
		SynidContext _localctx = new SynidContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_synid);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(110); 
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(109); synpropertychars();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(112); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			} while ( _alt!=2 && _alt!=-1 );
			}
		}
